[tool.poetry]
name = "vision-web-browser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
helium = "^5.1.1"
dotenv = "^0.9.9"
pillow = "^11.1.0"
python-dotenv = "^1.1.0"
smolagents = {extras = ["litellm"], version = "^1.12.0"}
chromedriver-py = "134.0.6998.165"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
